Fix: Responsive Screen on mobile versions
Should now work on very small screens.

--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ section {
   max-width: 700px;
 }
 
-.intro p{
+.intro p {
   margin: 30px 0;
 }
 
@@ -497,7 +497,19 @@ section {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 515px) {
+  .project-container {
+    width: 80vw;
+  }
+
+  .glow{
+    margin-left: 0px;
+  }
+
+  .project {
+    width: 75vw;
+  }
+
 }
 
 @media screen and (max-width: 320px) {
